<resources>
    <string name="app_name">CarRental</string>

    <!-- Login screen Strings -->
    <string name="login_email">Account Email</string>
    <string name="login_pass">Account Password</string>
    <string name="login_loginBtn">Login</string>
    <string name="login_registerBtn">Register</string>
    <string name="login_RememberMe">Remember me</string>

    <!-- Register screen String -->
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_gender">Gender</string>
    <string name="register_password">Password</string>
    <string name="register_ConfirmPassword">Confirm Password</string>
    <string name="register_Country">Country</string>
    <string name="register_city">City</string>
    <string name="Register_phoneNumber">Phone Number</string>

    <string name="Register_btnRegister">Register</string>
    <string name="Register_btnBack">Back</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_main_page">AdminMainPage</string>


</resources>
