<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/tv_LoginEmail"
        android:paddingHorizontal="40dp"
        android:textAlignment="center"
        android:text="@string/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_LoginEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/tv_LoginPass"
        android:paddingHorizontal="40dp"
        android:textAlignment="center"
        android:text="@string/login_pass"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_LoginPass"
        android:inputType="textPassword"
        android:paddingHorizontal="40dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp">

        <Button
            android:id="@+id/bt_Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_loginBtn" />

        <Button
            android:id="@+id/bt_Register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_registerBtn" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_LoginRememberMe"
        android:text="@string/login_RememberMe"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_LoginMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorErrorMessage"
        android:textSize="22dp" />
</LinearLayout>